# open_spiel

./: original_games_cmakelists.txt  play_vs_agent.py  pro yams.md  train_pro_yams.py  train_pro_yams_parallel.py
open_spiel/: CMakeLists.txt
open_spiel/games/: CMakeLists.txt
open_spiel/games/pro_yams/: pro_yams.cc  pro_yams.h  pro_yams_scratch_test.cc  pro_yams_test.cc
open_spiel/python/pytorch/: dqn.py
